# radar

./: .env.example  .gitignore  API_02_DADOS_DEMANDA.md  CLAUDE.md  DIAGRAMAS_MERMAID_RADAR_RR.md  INTEGRACAO_SISTEMA_TECNICO_RADAR_RR.md  MAPEAMENTO_EQUIPES_SISTEMAS_RADAR.md  README.md  RELATORIO_COMPARATIVO_POWEROUTAGE_US.md  RELATORIO_CONSISTENCIA_INTEGRACAO.md  alembic.ini  pyproject.toml
.claude/: README.md  REGRAS-COMMITS-E-PRS.md  TASK-WORKFLOW-CHECKLIST.md  settings.json
.claude/agents/: AGENTS-OVERVIEW.md  architecture-validator.md  backend-architect.md  clean-architecture-guardian.md  code-reviewer.md  database-optimizer.md  ddd-expert.md  python-expert.md  security-auditor.md  security-checker.md  solid-enforcer.md  tdd-enforcer.md  test-engineer.md  test-runner.md
.claude/commands/: commit.md  create-endpoint.md  create-entity.md  create-pr.md  create-repository.md  create-test.md  create-usecase.md  create-value-object.md  finish-task.md  next-task.md  quality-check.md  review-code.md  review-task.md  run-tests.md  start-task.md  validate-architecture.md  workflow-status.md
.claude/context/: current_context.json
.claude/hooks/: inject_context.py  post_write_check.py  session_start.py  validate_branch_base.py  validate_python_file.py  validate_venv.py
.claude/rules/: clean-architecture.md  clean-code.md  ddd.md  python-fastapi.md  solid-principles.md  tdd.md
.claude/skills/: README.md
.claude/skills/radar-endpoint/: SKILL.md
.claude/skills/radar-entity/: SKILL.md
.claude/skills/radar-repository/: SKILL.md
api/: README.md
api/docs/: 01-interrupcoes.md  03-dados-demanda.md
api/examples/: requests.http
api/integracao/: REQUISITOS_SISTEMA_TECNICO_API1.md
api/specs/: openapi.yaml
backend/: __init__.py
backend/apps/: __init__.py
backend/shared/: __init__.py
backend/tests/: __init__.py  conftest.py
database/tables/: 001_token_acesso.sql
database/views/: 001_vw_interrupcao_fornecimento.sql
docs/: README.md  RELATORIO_ATIVIDADES_12-12-2025.md
docs/adr/: ADR-001-arquitetura-hexagonal.md  ADR-002-banco-dados-oracle.md  ADR-003-linguagem-python.md  ADR-003-linguagem-typescript.md  ADR-004-framework-fastapi.md  ADR-004-framework-fastify.md  ADR-005-estrategia-testes.md  ADR-006-autenticacao-api-key.md  ADR-007-padrao-resposta-aneel.md  ADR-008-cache-strategy.md  ADR-009-logging-monitoring.md  ADR-010-error-handling.md  README.md  TEMPLATE.md
docs/analysis/: ANALISE_REQUISITOS_RADAR_RR.md  MELHORIAS-ABSORVIDAS-RADAR-BACKEND.md  REQUISITOS_AJURI_API1.md  REQUISITOS_SISTEMA_COMERCIAL_RADAR.md  REQUISITOS_SISTEMA_TECNICO_RADAR.md
docs/api-specs/: 02-demandas-diversas.md  04-seguranca.md  API_01_QUANTITATIVO_INTERRUPCOES_ATIVAS.md  API_03_QUANTITATIVO_DEMANDAS_DIVERSAS.md  API_04_TEMPO_REAL_REN_1137.md  openapi-api1-interrupcoes.yaml
docs/architecture/: 01-visao-geral.md  02-arquitetura-hexagonal.md  03-fluxo-dados.md  04-diagramas-sequencia.md  05-modelo-dominio.md  06-infraestrutura.md  README.md  api1-component-diagram.md
docs/database/: dblink-configuration.md
docs/deployment/: deployment-guide.md
docs/design/: DESIGN_ARQUITETURA_RADAR_RR.md
docs/development/: 00-index.md  01-clean-architecture.md  02-solid-principles.md  03-domain-driven-design.md  04-tdd-test-driven-development.md  05-clean-code.md  BRANCHING-STRATEGY.md  email-service.md  oracle-database.md  tasks.json
docs/operations/: api1-runbook.md  api1-troubleshooting.md  monitoring-metrics.md
docs/tasks/: README.md  VISIBILIDADE_INTEGRADA_PROJETO_RADAR.md
docs/testing/: api1-test-plan.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue
scripts/: check-ports.sh
(+186 files in other folders)
